<resources>
    <string name="planet_prompt">Choose a planet</string>
    <string name="general_yes">"Yes"</string>
    <string name="general_no">"No"</string>
    <string name="general_treatment">"চিকিৎসা:"</string>
    <string name="general_advice">"পরামর্শ:"</string>
    <string name="general_refer">"রেফার:"</string>
    <string name="general_facility_name">"*কেন্দ্রের নাম:"</string>
    <string name="general_cause">"*কারণ:"</string>
    <string name="pnc_m_poridorshan">পরিদর্শন</string>
    <string name="pnc_m_date">সেবাগ্রহনের তারিখ:</string>
    <string name="anc_service">"Antenatal Care ( ANC )"</string>
    <string name="delivery_service">"Delivery"</string>
    <string name="pnc_service">Postnatal Care ( PNC )</string>
    <string name="gp_service">General Patient Service</string>
    <string name="delivery_related_info">"প্রসব সংক্রান্ত তথ্য"</string>
    <string name="delivery_place">"*প্রসবের স্থান:"</string>
    <string name="delivery_date">"*প্রসবের তারিখ:"</string>
    <string name="delivery_time">"সময়:"</string>
    <string name="delivery_type">"*প্রসবের ধরণ:"</string>
    <string name="service_center_name">"সেবাকেন্দ্রের নাম:"</string>
    <string name="admission_date">"আগমনের তারিখ:"</string>
    <string name="ward">"ওয়ার্ড:"</string>
    <string name="bed">"শয্যা:"</string>
    <string name="delivery_result">"প্রসবের ফলাফল:"</string>
    <string name="min_delivery_result">"ফলাফল:"</string>
    <string name="live_born">"জীবিত জন্ম:"</string>
    <string name="dead_born">"মৃত জন্ম:"</string>
    <string name="dead_born_fresh">"ফ্রেশ:"</string>
    <string name="dead_born_macerated">"ম্যাসারেটেড:"</string>
    <string name="child_sex">"লিঙ্গ:"</string>
    <string name="not_detected">"Unidentified :"</string>
    <string name="amtsl">"প্রসবের তৃতীয় ধাপের সক্রিয় ব্যবস্থাপনায় (AMTSL) যা অনুসরণ করা হয়েছে:"</string>
    <string name="oxytocin">"প্রসবের ১ মিনিটের মধ্যে অক্সিটোসিন প্রয়োগ"</string>
    <string name="traction">"গর্ভফুল প্রসবের জন্য নাভিরজ্জুতে নিয়ন্ত্রিত টান"</string>
    <string name="massage">"জরায়ু ম্যাসাজ"</string>
    <string name="epcotomi">"ইপিসিওটমি করা হয়েছে? "</string>
    <string name="oxytocinGiven">"অক্সিটোসিন না থাকলে মিসোপ্রোস্টল খাওয়ানো হয়েছে?"</string>
    <string name="providerName">"প্রসব সম্পাদনকারীর নাম:"</string>
    <string name="providerSelfLabel">"আমি প্রসব সম্পাদনকারী"</string>
    <string name="providerSelfValue">" আমি নিজে"</string>
    <string name="providerTitle">"পদবী:"</string>
    <string name="deliveryComplication">"প্রসব সংক্রান্ত জটিলতা:"</string>
    <string name="bloodLoss">"অতিরিক্ত রক্তক্ষরণ"</string>
    <string name="delayedDelivery">"Prolonged labor"</string>
    <string name="blockedDelivery">"Obstructed labor"</string>
    <string name="blockedPlacenta">"Retained Placenta"</string>
    <string name="heavyHeadache">"প্রচন্ড মাথা ব্যাথা"</string>
    <string name="blurryVision">" চোখে ঝাপসা দেখা "</string>
    <string name="onlyHead">"মাথা ছাড়া অন্য কোন অঙ্গ বের হওয়া"</string>
    <string name="convulsion">"খিচুঁনি "</string>
    <string name="deliveryExtra">"অন্যান্য"</string>
    <string name="newborn_add">"নবজাতক\nসংযোজন"</string>
    <string name="death_fresh_add">"মৃত জন্ম \nসংযোজন: ফ্রেশ"</string>
    <string name="death_macerated_add">"মৃত জন্ম \nসংযোজন:ম্যাসারেটেড"</string>
    <string name="client_status">"গ্রহীতার অবস্থাঃ "</string>
    <string name="is_new_client">"নতুন গ্রহীতা?: "</string>
    <string name="new_client">"নতুন"</string>
    <string name="old_client">"পুরাতন"</string>
    <string name="providerSelfRemover">" আমি খুলেছি"</string>
    <string name="pill_condom_history">"গর্ভ নিরোধক খাবার বড়ি, কনডম সেবার ইতিহাস"</string>
    <string name="anc_title">" ANC Info "</string>
    <string name="visit">"Visit:"</string>
    <string name="other_source">Other Source</string>
    <string name="service_date">"*Visit Date:"</string>
    <string name="blood_presser">"Blood Pressure (mmHg):"</string>
    <string name="blood_pressure_mandatory">"*Blood Pressure (mmHg):"</string>
    <string name="weight">"Weight (Kg):"</string>
    <string name="pulse">"Pulse:"</string>
    <string name="edema">"Edema:"</string>
    <string name="uterus_height">"Uterus Height (Week):"</string>
    <string name="heart_speed">"FHR (bpm):"</string>
    <string name="fetal_presentation">"Fetal Presentation:"</string>
    <string name="anemia">"Anemia:"</string>
    <string name="anemia_mandatory">"*Anemia:"</string>
    <string name="hemoglobin">"Hemoglobin:"</string>
    <string name="abdomen">"পেট :"</string>
    <string name="lungs">"ফুসফুস : "</string>
    <string name="liver">"লিভার : "</string>
    <string name="splin">"প্লীহা :"</string>
    <string name="tonsil">"টনসিল: "</string>
    <string name="jaundice">"Jaundice:"</string>
    <string name="jaundice_mandatory">"*Jaundice:"</string>
    <string name="other">"Miscellaneous:"</string>
    <string name="urine_test_sugar">"Urine Test (Sugar):"</string>
    <string name="urine_test_albumin">"Urine Test (Albumin):"</string>
    <string name="complication">"Complications:"</string>
    <string name="physicalExamination">দৈহিক পরীক্ষা </string>
    <string name="drawback">"Problems:"</string>
    <string name="gp_drawback">"অসুবিধা/উপসর্গ:"</string>
    <string name="disease">"Disease:"</string>
    <string name="treatment">"Treatment:"</string>
    <string name="treatment_label">"Treatment"</string>
    <string name="quantity">"পরিমাণ"</string>
    <string name="advice">"Advice:"</string>
    <string name="refer">"Refer:"</string>
    <string name="center_name">"*Name of Center:"</string>
    <string name="reason">"*Reason:"</string>
    <string name="refer_reason">"*রেফারের কারণ:"</string>
    <string name="pnc_title">"প্রসবোত্তর সেবা"</string>
    <string name="pncInfo_mother">"বর্তমান সেবার তথ্য: মা"</string>
    <string name="temperature">"তাপমাত্রা:"</string>
    <string name="temperature_mandatory">"*তাপমাত্রা:"</string>
    <string name="breast_condition">"স্তনের অবস্থা:"</string>
    <string name="breast_exam_mandatory">"*স্তন পরীক্ষা:"</string>
    <string name="cervix_involution">"জরায়ুর ইনভলিউশন:"</string>
    <string name="perineum">"পেরিনিয়াম:"</string>
    <string name="family_planning_methods">"পরিবার পরিকল্পনা পদ্ধতি\n(পরামর্শ / পদ্ধতি প্রদান):"</string>
    <string name="family_planning_methods_2">"পরিবার পরিকল্পনা পদ্ধতি "</string>
    <string name="family_planning_methods_2_mandatory">"*পরিবার পরিকল্পনা পদ্ধতি "</string>
    <string name="cervix">"জরায়ুমুখ:"</string>
    <string name="hearts">"হৃদপিন্ড:"</string>
    <string name="vaginal_wall">"যোনিপথের দেয়াল:"</string>
    <string name="cervicitis">"জরায়ু মুখে ঘা বা পুঁজ:"</string>
    <string name="pac_uterus_height">"জরায়ুর উচ্চতা :"</string>
    <string name="visitDate">"সেবাগ্রহনের তারিখ:"</string>
    <string name="bpSystolic">"রক্তচাপ (মিঃ মিঃ মার্কারি) :"</string>
    <string name="breastCondition">"স্তনের অবস্থা:"</string>
    <string name="uterusInvolution">"জরায়ুর ইনভলিউশন:"</string>
    <string name="hematuria">"স্রাব/ রক্তস্রাব:"</string>
    <string name="serviceSource">"পরিবার পরিকল্পনা পদ্ধতি\n(পরামর্শ / পদ্ধতি প্রদান) :"</string>
    <string name="referCenterName">"কেন্দ্রের নাম :"</string>
    <string name="referReason">"Reason:"</string>
    <string name="fp_methods">"পদ্ধতিঃ "</string>
    <string name="fp_methods_mandatory">"*পদ্ধতিঃ "</string>
    <string name="visit_reason_mandatory">"*পরিদর্শনের কারণঃ "</string>
    <string name="pncInfo_child">"বর্তমান সেবার তথ্য: সন্তান "</string>
    <string name="new_born">" নবজাতক: "</string>
    <string name="breath_per_minute">" শ্বাস (মিনিটে কতবার): "</string>
    <string name="breath_per_minute_mandatory">"*শ্বাস (মিনিটে কতবার): "</string>
    <string name="complicationsign">" অসুবিধা: "</string>
    <string name="detail">" বিস্তারিত "</string>
    <string name="fixed">"নির্ধারিত"</string>
    <string name="fixed_followup">"নির্ধারিত ফলোআপ"</string>
    <string name="unfixed">"অনির্ধারিত"</string>
    <string name="unfixed_followup">"অনির্ধারিত ফলোআপ"</string>
    <string name="followup1">"ফলোআপ ১"</string>
    <string name="followup2">"ফলোআপ ২"</string>
    <string name="followup3">"ফলোআপ ৩"</string>
    <string name="only_breast_feeding">" শুধুমাত্র বুকের দুধ খাওয়ানো:"</string>
    <string name="delevery_service">"Delivery Service"</string>
    <string name="delevery_related_info">"Delivery Info"</string>
    <string name="newborn_related_info">"Newborn Info"</string>
    <string name="newborn_spinner_label">"Select Specific child from the following dropdown to check or update newborn entry"</string>
    <string name="child">"Child: "</string>
    <string name="son">"* Boy"</string>
    <string name="daughter">"* Girl "</string>
    <string name="born_weight">"Birth Weight (KG):"</string>
    <string name="premature_birth_before_37_weeks_full">"Premature Birth "</string>
    <string name="week"> " Weeks " </string>
    <string name="mis_service_type_text">"সেবার ধরণ"</string>
    <string name="mis_fwc_text">"কেন্দ্র"</string>
    <string name="mis_satelite_text">"স্যাটেলাইট"</string>
    <string name="mis_total_text">"মোট"</string>
    <string name="childcaresymptom37">বুকের দুধ খাওয়ানো নিরূপণ:</string>
    <string name="childcaresymptom38">শিশু গত এক ঘন্টায় বুকের দুধ খেয়েছে</string>
    <string name="childcaresymptom39">১। প্রযোজ্য ক্ষেত্রে বুকের দুধ খাওয়ানোর সময় বুকে লাগানো (Attachment) লক্ষ্য করুন</string>
    <string name="childcaresymptom40">একেবারেই হয়নি</string>
    <string name="childcaresymptom41">ভালভাবে হয়নি</string>
    <string name="childcaresymptom42">ভালোভাবে হয়েছে</string>
    <string name="childcaresymptom43">২। পজিশন যাচাই করার জন্য লক্ষ্য করুন:</string>
    <string name="childcaresymptom44">ভালো পজিশন</string>
    <string name="childcaresymptom45">ভালো পজিশন না</string>
    <string name="childcaresymptom46">একেবারেই দুধ চোষে না</string>
    <string name="childcaresymptom47">ভালোভাবে দুধ চোষে না</string>
    <string name="childcaresymptom48">ভালোভাবে দুধ চোষে</string>
    <string name="childcaresymptom54">বুকের নিচের অংশ ভিতরের ডেবে যাওয়া </string>
    <string name="childcaresymptom55">দ্রুত শ্বাস শ্বাসের হার মিনিটে ৫০ বা তার বেশি (২ মাস থেকে ১ বছর পর্যন্ত)</string>
    <string name="childcaresymptom56">দ্রুত শ্বাস শ্বাসের হার মিনিটে ৪০ বা তার বেশি (১ বছর থেকে ৫ বছর পর্যন্ত)</string>
    <string name="childcaresymptom91">হাম</string>
    <string name="childcaresymptom92">জ্বর</string>
    <string name="childcaresymptom93">সারা গায়ে লাল দানা </string>
    <string name="childcaresymptom94">যেকোনো একটি: কাশি, নাক ঝরা অথবা লাল চোখ</string>
    <string name="childcaresymptom95">মারাত্মক জটিলতাসহ হাম: যে কোন সাধারণ বিপদজনক চিহ্ন অথবা ঘোলাটে কর্নিয়া অথবা গভীর এবং ব্যাপক মুখের ঘা</string>
    <string name="childcaresymptom96">চোখ ও মুখের জটিলতাসহ হাম: চোখ দিয়ে পুঁজ পড়ছে অথবা মুখের ক্ষত</string>
    <string name="childcaresymptom97">উভয় পা ফোলা: </string>
    <string name="childcaresymptom98">উচ্চতা দৈর্ঘ্য অনুযায়ী ওজন এর জন্য z-score: </string>
    <string name="childcaresymptom99">-৩ এর চেয়ে কম</string>
    <string name="childcaresymptom100">-৩ এবং -২ এর মাঝে</string>
    <string name="childcaresymptom101">-২ অথবা এর চেয়ে বেশি</string>
    <string name="childcaresymptom102">৬ মাস বা তার বেশি বয়সী শিশুর : উপরে বাহুর মাঝখানের পরিধি ১১৫ মিলিমিটারের কম</string>
    <string name="childcaresymptom105">৩ | </string>
    <string name="severeSyndrome">যে কোন সাধারণ বিপদজনক চিহ্ন(শিশু পান করতে অথবা বুকের দুধ খেতে পারেনা, সবকিছু বমি করে ফেলে দেয়, খিচুনি আছে, নেতিয়ে পরেছে অথবা অজ্ঞান) অথবা ঘোলাটে কর্নিয়া অথবা গভীর এবং বেপক মুখে ঘা</string>
    <string name="malNutritionSever">স্বাস্থ্যগত জটিলতা আছে </string>
    <string name="malNutritionSever2"> পুষ্টি চিকিৎসা শেষ করতে পারেনি </string>
    <string name="malNutritionLow">পুষ্টি চিকিৎসা শেষ করেছে</string>
    <string name="malNutritionSever1">বুকের দুধ খাওয়াতে সমস্যা</string>
</resources>