<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layout_pneumonia_2_months_to_5_years"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/layoutborderblack"
    android:layout_margin="5dp">

    <!--Symptom 54 Segment-->
    <RelativeLayout
        android:id="@+id/childcaresymptom54Segement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/childcaresymptom54checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/childcaresymptom54TextviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/childcaresymptom54"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_toRightOf="@id/childcaresymptom54checkbox"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

    <!--Symptom 55 Segment-->
    <RelativeLayout
        android:id="@+id/childcaresymptom55Segement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/childcaresymptom55checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/childcaresymptom55"
            android:textColor="@color/black"
            android:textSize="18sp"/>


    </RelativeLayout>

    <!--Symptom 56 Segment-->
    <RelativeLayout
        android:id="@+id/childcaresymptom56Segement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/childcaresymptom56checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/childcaresymptom56"
            android:textColor="@color/black"
            android:textSize="18sp"/>


    </RelativeLayout>



</LinearLayout>
